--- a/Web_Notes/CVE_Site_Project/index.html
+++ b/Web_Notes/CVE_Site_Project/index.html
@@ -3,7 +3,23 @@
 	<head>
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Document</title>
+		<title>Joel's Personal Site</title>
 	</head>
-	<body></body>
+	<body>
+		<h1>Joel Godfrey-Smith</h1>
+		<p><em>Cybersecurity Engineer and Full-stack Developer</em></p>
+		<p>
+			I am a former submarine officer. Now I am a cybersecurity engineer for the
+			Navy. Outside of work, I enjoy Linux and developing web and C++
+			applications.
+		</p>
+		<hr />
+		<h3>Education</h3>
+		<ul>
+			<li>Naval Postgraduate School</li>
+			<li>US Naval Academy</li>
+			<li>Navy Nuclear Power School</li>
+			<li>Navy Nuclear Electrician Mate's A School</li>
+		</ul>
+	</body>
 </html>
