--- a/Web_Notes/CVE_Site_Project/index.html
+++ b/Web_Notes/CVE_Site_Project/index.html
@@ -6,20 +6,82 @@
 		<title>Joel's Personal Site</title>
 	</head>
 	<body>
-		<h1>Joel Godfrey-Smith</h1>
-		<p><em>Cybersecurity Engineer and Full-stack Developer</em></p>
-		<p>
-			I am a former submarine officer. Now I am a cybersecurity engineer for the
-			Navy. Outside of work, I enjoy Linux and developing web and C++
-			applications.
-		</p>
+		<table cellspacing="20">
+			<tr>
+				<td>
+					<img
+						src="images/imageonline-co-resizedimage.png"
+						alt="Joel profile pic"
+					/>
+				</td>
+				<td>
+					<h1>Joel Godfrey-Smith</h1>
+					<p><em>Cybersecurity Engineer and Full-stack Developer</em></p>
+					<p>
+						I am a former submarine officer. Now I am a cybersecurity engineer
+						for the Navy. Outside of work, I enjoy Linux and developing web and
+						C++ applications.
+					</p>
+				</td>
+			</tr>
+		</table>
 		<hr />
 		<h3>Education</h3>
 		<ul>
-			<li>Naval Postgraduate School</li>
-			<li>US Naval Academy</li>
-			<li>Navy Nuclear Power School</li>
-			<li>Navy Nuclear Electrician Mate's A School</li>
+			<li>
+				<a href="https://nps.edu/">Naval Postgraduate School</a>
+			</li>
+			<li>
+				<a href="https://www.usna.edu/homepage.php">US Naval Academy</a>
+			</li>
+			<li>
+				<a href="https://www.navsea.navy.mil/Home/NNPTC/powerschool.aspx"
+					>Navy Nuclear Power School</a
+				>
+			</li>
+			<li>
+				<a href="https://www.navsea.navy.mil/Home/NNPTC/A-School/"
+					>Navy Nuclear Electrician Mate's A School</a
+				>
+			</li>
 		</ul>
+		<hr />
+		<h3>Work Experience</h3>
+		<table>
+			<thead>
+				<tr>
+					<th>Dates</th>
+					<th>Work</th>
+				</tr>
+			</thead>
+			<tbody>
+				<tr>
+					<td>2018-present</td>
+					<td>Booz Allen Hamilton</td>
+				</tr>
+				<tr>
+					<td>2013-2018</td>
+					<td>Asset Performance Networks</td>
+				</tr>
+			</tbody>
+			<tfoot>
+				<tr>
+					<td>US Navy</td>
+				</tr>
+			</tfoot>
+		</table>
+		<hr />
+		<h3>Hobbies</h3>
+		<ol>
+			<li>Cooking</li>
+			<li>Cryptocurrencies</li>
+			<li>Pop Culture</li>
+			<ul>
+				<li>Comics</li>
+				<li>SciFi</li>
+				<li>Horror</li>
+			</ul>
+		</ol>
+		<a href="contact.html">Contact Information</a>
 	</body>
 </html>
