--- a/Web_Notes/CVE_Site_Project_CSS/index.html
+++ b/Web_Notes/CVE_Site_Project_CSS/index.html
@@ -4,6 +4,12 @@
 		<meta charset="UTF-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>Joel's Personal Site</title>
+		<link rel="stylesheet" href="css/styles.css" />
+		<link rel="preconnect" href="https://fonts.gstatic.com" />
+		<link
+			href="https://fonts.googleapis.com/css2?family=Lato&family=Montserrat&family=Open+Sans&family=Roboto&family=Roboto+Slab&family=Share+Tech&display=swap"
+			rel="stylesheet"
+		/>
 	</head>
 	<body>
 		<table cellspacing="20">
