--- a/Web_Notes/CVE_Site_Project_CSS/contact.html
+++ b/Web_Notes/CVE_Site_Project_CSS/contact.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
-	<head>
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Contact Information</title>
-	</head>
-	<body>
-		<h1>Contact Details</h1>
-		<h3>Address</h3>
-		<p>Washington, DC</p>
-		<h3>Email</h3>
-		<p>fakeEmail@fakeEmails.com</p>
-		<h3>Telephone</h3>
-		<p>867-5309</p>
-		<form
-			action="mailto:info@fakeEmails.com"
-			method="post"
-			enctype="text/plain"
-		>
-			<label>Your Name:</label>
-			<input type="text" name="yourName" value="" />
-			<br />
-			<label>Email:</label>
-			<input type="email" name="yourEmail" value="" />
-			<br />
-			<label>Your Message:</label>
-			<br />
-			<textarea name="yourMessage" cols="30" rows="10"></textarea>
-			<br />
-			<input type="submit" value="Submit" />
-			<br />
-			<label for="">Do you want to sign up for our email list?</label>
-			<input type="checkbox" name="" id="" />
-		</form>
-	</body>
+<head>
+    <meta charset="UTF-8"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>Contact Information</title>
+    <link rel="stylesheet" href="css/styles.css"/>
+</head>
+<body>
+<h1>Contact Details</h1>
+<h3>Address</h3>
+<p>Washington, DC</p>
+<h3>Email</h3>
+<p>fakeEmail@fakeEmails.com</p>
+<h3>Telephone</h3>
+<p>867-5309</p>
+<form
+        action="mailto:info@fakeEmails.com"
+        method="post"
+        enctype="text/plain"
+>
+    <label>Your Name:</label>
+    <input type="text" name="yourName" value=""/>
+    <br/>
+    <label>Email:</label>
+    <input type="email" name="yourEmail" value=""/>
+    <br/>
+    <label>Your Message:</label>
+    <br/>
+    <textarea name="yourMessage" cols="30" rows="10"></textarea>
+    <br/>
+    <input type="submit" value="Submit"/>
+    <br/>
+    <label for="">Do you want to sign up for our email list?</label>
+    <input type="checkbox" name="" id=""/>
+</form>
+</body>
 </html>
